--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,11 +15,11 @@
 :root {
   --one: #393E41;
   --two: #F7F5F1;
-  --three: #e2020f;
-  /*
-  --four: ;
-  --five: ;
-  */
+  --three: #B10B14; /* #e2020f */
+  --four: #252a47;
+
+  /*--five: ;*/
+
   --black: #000000;
   --white: #ffffff;
 
@@ -65,7 +65,7 @@ header {
   justify-content: space-around;
   align-items: center;
   padding: 0.2rem 2rem;
-  background: var(--two);
+  background: var(--four);
   color: var(--one);
   position: fixed;
   top: 0;
@@ -105,7 +105,7 @@ header {
 }
 
 .nav a {
-  color: var(--one);
+  color: var(--two);
 }
 
 .nav ul {
@@ -149,7 +149,9 @@ header.scroll-down {
 
 /********** 04. Slideshow **********/
 
-
+main {
+  background: var(--two);
+}
 
 /*Slideshow*/
 .slideshow-container {
@@ -218,12 +220,12 @@ header.scroll-down {
 }
 
 .next {
-  right: -5px;
+  right: 5px;
   border-radius: 3px 3px 3px 3px
 }
 
 .prev {
-  left: -5px;
+  left: 5px;
   border-radius: 3px 3px 3px 3px
 }
 
@@ -281,13 +283,22 @@ header.scroll-down {
 
 /*Chart settings*/
 
+.chartContent {
+  background-color: var(--white);
+}
+
+#chart {
+  padding-top: 4rem;
+}
+
 .chart {
   display: flex;
   justify-content: center;
   width: 60rem;
-  height: 50rem;
+  height: auto;
   align-items: center;
   margin: 0 auto;
+  margin-bottom: 4rem;
 }
 
 /* Hero Image*/
@@ -312,11 +323,14 @@ header.scroll-down {
   font-weight: 500;
   margin-top: 0;
   text-align: center;
+  text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.7);
 }
 
 #hero-text {
-  font-size: 1rem;
-  font-weight: 500;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight: 400;
+  text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.7);
 }
 
 main h2 {
@@ -327,6 +341,12 @@ main h2 {
 
 
 /********** 05. Categories *********/
+
+#departments {
+  font-weight: 600;
+  font-size: 2.5rem;
+}
+
 .depWrapper {
   margin-left: 14vw;
   margin-right: 14vw;
@@ -340,106 +360,53 @@ main h2 {
 
 #depContainer>* {
   margin: 20px;
-  width: 14vw;
-  height: 200px;
-  background-color: var(--two);
 }
 
 /*objects results*/
+
 .card {
-  display: flex;
-  justify-content: flex-end;
+  margin: 1rem;
+  position: relative;
+  width: 250px;
+  height: 250px;
 }
 
-.card:hover {
-  top: -4px;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+.thumb {
+  position: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: flex-end;
+  align-content: flex-end;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, .2);
+}
+
+.textOverlay {
+  flex-grow: 1;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
+  padding: 30px 10px 10px 10px;
 }
 
 .card h3 {
   font-size: 1.4rem;
   text-align: center;
-  align-items: flex-end;
-  margin: 1rem;
-  color: var(--one);
+  color: var(--white);
+  margin: 0;
+  width: auto;
 }
 
-.card .thumb {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  align-items: stretch;
-  position: relative;
+.card--effect-1 .thumb {
+  transform: scale(.92);
+  transition: .4s;
 }
 
-/*
-/*First grid
-.first-grid-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
-  height: auto;
-  padding-right: 15vw;
-  padding-left: 15vw;
-  gap: 20px;
-  justify-content: center;
-  grid-template-areas:
-    "grid1"
-    "grid2"
-    "grid3";
-}
-
-#grid1,
-#grid3,
-#grid2 {
-  color: var(--black);
-  background-color: var(--two);
-}
-
-.cake,
-.bread,
-.dessert {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  height: 30vh;
-  width: 100%;
-}
-
-.card-content {
-  display: flex;
-  flex-direction: column;
-}
-
-.first-grid-container h5 {
-  text-align: center;
-}
-
-.first-grid-container a:link,
-.first-grid-container a:visited {
-  background-color: var(--two);
-  color: var(--black);
-  border: 1px solid var(--black);
-  padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 1rem;
-}
-
-.first-grid-container a:hover,
-.first-grid-container a:active {
-  background-color: var(--black);
-  color: white;
-}
-*/
-
-
-.socials {
-  width: 100%;
-  height: 50px;
-  background-color: #393E41;
+.card--effect-1:hover .thumb {
+  transform: scale(1);
 }
 
 
@@ -451,41 +418,40 @@ main h2 {
   width: 100%;
   position: absolute;
   z-index: 201;
-  background-color: var(--one);
+  background-color: var(--four);
   color: var(--two);
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr), 1rem;
   grid-template-areas:
-    "footer1 footer1"
-    "footer2 footer2"
+    "footer1 footer2"
+    "footer1 footer2"
     "footer3 footer3";
 }
 
 #footer1 {
   grid-area: footer1;
   height: auto;
-  margin: 2rem;
-  margin-top: 2vh;
+  margin: 0 2rem;
   text-align: center;
 }
 
 #footer2 {
   grid-area: footer2;
   height: auto;
-  margin: 2rem;
-  margin-top: 2vh;
+  margin: 0 2rem;
   text-align: center;
+  border-left: 1px solid var(--two);
 }
 
 #footer3 {
   grid-area: footer3;
   padding: 1rem;
   color: var(--two);
-  background-color: var(--one);
+  background-color: var(--three);
   font-size: 1rem;
   text-align: center;
   width: 100%;
-  border-top: 1px solid rgba(0, 0, 0, 0.4);
+  border-top: 1px solid var(--two);
 }
 
 .footer-text {
